dois-pontos em contato.html

--- a/contato.html
+++ b/contato.html
@@ -49,12 +49,12 @@
           <p>Como prefere o nosso contato ?</p>
 
           <label for="radio-email">
-            E-mail
+            E-mail :
             <input type="radio" name="contato" value="email" id="radio-email" />
           </label>
 
           <label for="radio-telefone">
-            Telefone
+            Telefone :
             <input
               type="radio"
               name="contato"
@@ -64,7 +64,7 @@
           </label>
 
           <label for="radio-whatsapp">
-            Whatsapp
+            Whatsapp :
             <input
               type="radio"
               name="contato"
