correção-forúm-alura

--- a/contato.html
+++ b/contato.html
@@ -25,16 +25,14 @@
 
     <main>
       <form action="">
-        <label for="nomesobrenome" class="input-padrao"
-          >Nome e Sobrenome :</label
-        >
-        <input type="text" id="nomesobrenome" />
+        <label for="nomesobrenome">Nome e Sobrenome :</label>
+        <input type="text" id="nomesobrenome" class="input-padrao" />
 
-        <label for="email" class="input-padrao">E-mail :</label>
-        <input type="text" id="email" />
+        <label for="email">E-mail :</label>
+        <input type="text" id="email" class="input-padrao" />
 
-        <label for="telefone" class="input-padrao">Telefone :</label>
-        <input type="text" id="telefone" />
+        <label for="telefone">Telefone :</label>
+        <input type="text" id="telefone" class="input-padrao" />
 
         <label for="mensagem">Mensagem</label>
         <textarea
