--- a/contato.html
+++ b/contato.html
@@ -11,7 +11,7 @@
   <body>
     <header>
       <div class="caixa">
-        <h1><img src="logo.png" /></h1>
+        <h1><img src="logo.png" alt="Logo da Barbearia Alura"></h1>
 
         <nav>
           <ul>
@@ -26,13 +26,13 @@
     <main>
       <form action="">
         <label for="nomesobrenome">Nome e Sobrenome :</label>
-        <input type="text" id="nomesobrenome" class="input-padrao" />
+        <input type="text" id="nomesobrenome" class="input-padrao" required/>
 
         <label for="email">E-mail :</label>
-        <input type="text" id="email" class="input-padrao" />
+        <input type="email" id="email" class="input-padrao" required placeholder="seuemail@dominio.com.br"/>
 
         <label for="telefone">Telefone :</label>
-        <input type="text" id="telefone" class="input-padrao" />
+        <input type="tel" id="telefone" class="input-padrao" required placeholder="(XX) XXXXX-XXXX"/>
 
         <label for="mensagem">Mensagem</label>
         <textarea
@@ -41,10 +41,11 @@
           class="input-padrao"
           cols="70"
           rows="10"
+          required
         ></textarea>
 
-        <div class="contato">
-          <p>Como prefere o nosso contato ?</p>
+        <fieldset class="contato">
+          <legend>Como prefere o nosso contato ?</legend>
 
           <label for="radio-email">
             E-mail 
@@ -68,12 +69,13 @@
               name="contato"
               value="whatsapp"
               id="radio-whatsapp"
+              checked
             />
           </label>
-        </div>
+        </fieldset>
 
-        <div>
-          <p>Qual horário prefere ser atendido ?</p>
+        <fieldset>
+          <legend>Qual horário prefere ser atendido ?</legend>
 
           <select>
             <option>Manhã</option>
@@ -84,17 +86,17 @@
           </select>
 
           <label class="checkbox">
-            <input type="checkbox" /> Gostaria de receber nossas novidades por
+            <input type="checkbox" checked/> Gostaria de receber nossas novidades por
             e-mail ?
           </label>
-        </div>
+        </fieldset>
 
         <input type="submit" value="Enviar Formulário" />
       </form>
     </main>
 
     <footer>
-      <img src="../barbearia_alura/logo-branco.png" />
+      <img src="../barbearia_alura/logo-branco.png" alt="Logo da Barbearia Alura"/>
       <p class="copyright">&copy; Copyright Barbearia Alura - 2020</p>
     </footer>
   </body>
