--- a/contato.html
+++ b/contato.html
@@ -91,7 +91,7 @@
           </label>
         </fieldset>
 
-        <input type="submit" value="Enviar Formulário" />
+        <input type="submit" value="Enviar Formulário" class="enviar" />
       </form>
     </main>
 
