Finalizando 3 curso HTML e CSS Alura

--- a/contato.html
+++ b/contato.html
@@ -93,6 +93,37 @@
 
         <input type="submit" value="Enviar Formulário" class="enviar" />
       </form>
+
+      <table>
+
+        <thead>
+
+          <tr>
+            <th>DIA</th>
+            <th>HORÁRIO</th>
+          </tr>
+
+        </thead>
+
+        <tbody>
+
+          <tr>
+            <td>SEGUNDA</td>
+            <td>8H ~ 20H</td>
+          </tr>
+          <tr>
+            <td>QUARTA</td>
+            <td>8H ~ 20H</td>
+          </tr>
+          <tr>
+            <td>SEXTA</td>
+            <td>8H ~ 20H</td>
+          </tr>
+
+        </tbody>
+        
+      </table>
+
     </main>
 
     <footer>
