Coclusao do 4 curso alura HTML e CSS

--- a/contato.html
+++ b/contato.html
@@ -27,7 +27,7 @@
       </div>
     </header>
 
-    <main>
+    <main class="contato-main">
       <form action="">
         <label for="nomesobrenome">Nome e Sobrenome :</label>
         <input type="text" id="nomesobrenome" class="input-padrao" required/>
