--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
-    <title>Barbearia Alura</title>
+    <title>Barber Fight</title>
     <link rel="stylesheet" href="reset.css" />
-    <link rel="stylesheet" href="style-main.css" />
+    <link rel="stylesheet" href="style-index.css" />
     <link
       href="https://fonts.googleapis.com/css?family=Montserrat&display=swap"
       rel="stylesheet"
@@ -14,7 +14,7 @@
   <body>
     <header>
       <div class="caixa">
-        <h1><img src="logo.png" alt="Logo da Barbearia Alura" /></h1>
+        <h1><img src="logo.png" alt="Logo da Barber Fight" /></h1>
 
         <nav>
           <ul>
@@ -28,7 +28,7 @@
     <img class="banner" src="banner.jpg" />
     <main>
       <section class="principal">
-        <h2 class="titulo-principal">Sobre a Barbearia Alura</h2>
+        <h2 class="titulo-principal">Sobre a Barber Fight</h2>
 
         <img
           src="./utensilios.jpg"
@@ -38,9 +38,9 @@
 
         <p>
           Localizada no coração da cidade a
-          <strong>Barbearia Alura</strong> traz para o mercado o que há de
-          melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura
-          já é destaque na cidade e conquista novos clientes a cada dia.
+          <strong>Barber Fight</strong> traz para o mercado o que há de melhor
+          para o seu cabelo e barba. Fundada em 2019, a Barber Fight já é
+          destaque na cidade e conquista novos clientes a cada dia.
         </p>
 
         <p id="missao">
@@ -64,8 +64,8 @@
         <h3 class="titulo-principal">Nosso estabelecimento</h3>
         <p>Nosso estabelecimento está localizado no coração da cidade.</p>
 
-        <iframe
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3981.3710381212204!2d-38.51778668475733!3d-3.729032997286939!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7c7485a63eea45f%3A0x74fd193863de59c7!2sRua%20Costa%20Barros%2C%20915!5e0!3m2!1spt-BR!2sbr!4v1604518371320!5m2!1spt-BR!2sbr"
+        <div class="mapa-conteudo"><iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3981.425730901319!2d-38.5655885491807!3d-3.7169371441430417!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7c7493fe60bc465%3A0xdfccab32ffa62980!2sBarber%20Fight!5e0!3m2!1spt-BR!2sbr!4v1604585449024!5m2!1spt-BR!2sbr"
           width="100%"
           height="450"
           frameborder="0"
@@ -73,20 +73,24 @@
           allowfullscreen=""
           aria-hidden="false"
           tabindex="0"
-        ></iframe>
+        >
+          ></iframe
+        ></div>
       </section>
 
       <section class="beneficios">
         <h3 class="titulo-principal">Benefícios</h3>
 
-        <ul>
-          <li class="itens">Atendimento aos Clientes</li>
-          <li class="itens">Espaço diferenciado</li>
-          <li class="itens">Localização</li>
-          <li class="itens">Profissionais Qualificados</li>
-        </ul>
-
-        <img src="beneficios.jpg" class="imagembeneficios" />
+        <div class="conteudo-beneficios">
+          <ul class="lista-beneficios">
+            <li class="itens">Atendimento aos Clientes</li>
+            <li class="itens">Espaço diferenciado</li>
+            <li class="itens">Localização</li>
+            <li class="itens">Profissionais Qualificados</li>
+            <li class="itens">Pontualidade</li>
+            <li class="itens">Limpeza</li>
+          </ul><img src="beneficios.jpg" class="imagembeneficios" />
+        </div>
 
         <div class="video">
           <iframe
@@ -106,7 +110,7 @@
         src="../barbearia_alura/logo-branco.png"
         alt="Logo da Barbearia Alura"
       />
-      <p class="copyright">&copy; Copyright Barbearia Alura - 2020</p>
+      <p class="copyright">&copy; Copyright Barber Fight - 2020</p>
     </footer>
   </body>
 </html>
