--- a/produtos.html
+++ b/produtos.html
@@ -26,7 +26,7 @@
       </div>
     </header>
 
-    <main>
+    <main class="produtos-main">
       <ul class="produtos">
         <li>
           <h2>Cabelo</h2>
